tests/sema/fail/v22_fail_for_range_end_u32.ep
# COMPILE_FAIL_CONTAINS: for range end expected i64, got u32
fun main(): void {
    for i: 0:u32(3) {
    }
}
